deal with date ranges, and bogus jobs_status=All/Total Completed

--- a/webservice/templates/actual_pending_files.html
+++ b/webservice/templates/actual_pending_files.html
@@ -26,8 +26,8 @@
 
 
 {%block subheader%}
-<a href="{{prev}}">&lt;previous {{days}} days</a> | 
-<a href="{{next}}">next {{days}} days &gt;</a>
+<a href="{{prev}}">&lt;previous {{tdays}} days</a> | 
+<a href="{{next}}">next {{tdays}} days &gt;</a>
 {%endblock%}
 
 
