--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -23,11 +23,11 @@
   Info by day{%include 'help_button.html'%}
 </h1>
 <!--<div class="ui subheader">
-{{days}} Days ending  {{tmax}}
+{{tdays}} Days ending  {{tmax}}
 </div>-->
 
-<a href="{{prev}}">&lt;previous {{days}} days</a> |
-<a href="{{next}}">next {{days}} days &gt;</a>
+<a href="{{prev}}">&lt;previous {{tdays}} days</a> |
+<a href="{{next}}">next {{tdays}} days &gt;</a>
 {%endblock%}
 
 
