--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -28,8 +28,8 @@
     </div>
 </div>
 
-<a href="{{prev}}">&lt;previous {{days}} days</a> | 
-<a href="{{next}}">next {{days}} days &gt;</a>
+<a href="{{prev}}">&lt;previous {{tdays}} days</a> | 
+<a href="{{next}}">next {{tdays}} days &gt;</a>
 {%endblock%}
 
 
