--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -26,8 +26,8 @@
 </div>
 
 <div>
-  <a href="{{prev}}">&lt;previous {{days}} days</a> |
-  <a href="{{next}}">next {{days}} days &gt;</a>
+  <a href="{{prev}}">&lt;previous {{tdays}} days</a> |
+  <a href="{{next}}">next {{tdays}} days &gt;</a>
 </div>
 {%endblock%}
 
