--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -67,8 +67,8 @@
         </form>
     </div>
     <br>
-    <a href="{{prev}}">&lt;previous {{days}} days</a> |
-    <a href="{{next}}">next {{days}} days &gt;</a>
+    <a href="{{prev}}">&lt;previous {{tdays}} days</a> |
+    <a href="{{next}}">next {{tdays}} days &gt;</a>
 
     <div class="ui basic label">
       <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
