--- a/webservice/templates/show_tags.html
+++ b/webservice/templates/show_tags.html
@@ -1,26 +1,22 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS: Campaign Tags for {{experiment}} </title>
+    POMS: Campaign Tags for {{experiment}}
 {%endblock%}
 
 
 {%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
+<div class="ui breadcrumb" style="margin-top: -45px; margin-left: 10px">
   <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section">Campaign Tags for {{experiment}}</div>
+  <div class="section">Campaign Tags</div>
 </div>
 {%endblock%}
 
 
 {%block header%}
-<h1 class="ui header">
-    POMS: Campaign Tags for {{experiment}} 
-</h1>
+Campaign Tags
 {%endblock%}
-
-
 
 {%block subheader%}
 &nbsp;
