--- a/webservice/templates/failed_jobs_by_whatever.html
+++ b/webservice/templates/failed_jobs_by_whatever.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS</title>
+POMS: Failed Jobs
 {%endblock%}
 
 
@@ -17,26 +17,20 @@
 
 
 {%block header%}
-<h1 class="ui header">
-    Jobs by {{columns[:-1]|join(',')}} {%include 'help_button.html'%}
-</h1>
+Jobs by {{columns[:-1]|join(',')}} {%include 'help_button.html'%}
+{%endblock%}
+
+{%block subheader%}
 <div class="ui subheader">
 <!-- Jobs by exitcode for {{time_range_string}} -->
     <div class="ui basic label">
       <i class="wait icon"></i>  <div class="tmin" style="display:inline;"></div> to <div class="tmax" style="display:inline;"></div>
     </div>
 </div>
-
-
-<br/>
-<a href="{{prev}}">&lt;previous {{tdays}} days</a> | 
+<div class="ui subheader">
+<a href="{{prev}}">&lt;previous {{tdays}} days</a> |
 <a href="{{next}}">next {{tdays}} days &gt;</a>
-<br/>
-{%endblock%}
-
-
-
-{%block subheader%}
+</div>
 {%endblock%}
 
 
