--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -42,13 +42,13 @@
     <div class="header">Campaign Data</div>
     <div class="menu">
       <a class="item" href="{{pomspath}}/show_tags">
-        Campaign Tags
+        Tagged Campaigns
       </a>
       <a class="item" href="{{pomspath}}/show_campaigns">
-        Active Stage
+        Active Campaign Stages
       </a>
       <a class="item" href="{{pomspath}}/show_campaigns?active=False">
-        InActive Stage
+        InActive Campaign Stages
       </a>
     </div>
   </div>
