--- a/webservice/templates/mobil_menu.html
+++ b/webservice/templates/mobil_menu.html
@@ -1,134 +1,14 @@
 <!--mobile menu-->
 
-<div class="ui vertical inverted sidebar menu" id="toc">
+<div class="ui vertical sidebar menu" id="toc">
 
-  <div class="item">
-    <div style="cursor: default;">
-      <i class="rocket icon"></i>
-      <!--
-          <a class="ui logo icon image" href="">
-            <img src="{{pomspath}}/static/images/logo.png">
-          </a>
-          -->
-      <b>POMS</b>
-    </div>
-  </div>
-
-  <a class="item" href="{{pomspath}}/">
-    <b>Dashboard</b>
-  </a>
-
-  <a class="item" href="{{pomspath}}/calendar">
-    <b>Calendar</b>
-  </a>
-
-
-  <div class="item">
-    <div class="header">DB Admin</div>
-    <div class="menu">
-      <a class="item" href="{{pomspath}}/experiment_edit">
-        Experiments
-      </a>
-      <a class="item" href="{{pomspath}}/user_edit">
-        Users
-      </a>
-      <a class="item" href="{{pomspath}}/raw_tables">
-        Raw Tables
-      </a>
-    </div>
-  </div>
-
-  <div class="item">
-    <div class="header">Campaign Info</div>
-    <div class="menu">
-      {% if current_experimenter is defined and current_experimenter.authorized_for %}
-      {% for e in current_experimenter.authorized_for.keys() %}
-      {%if e != 'root' and current_experimenter.authorized_for[e] %}
-      <a class="item" href="{{pomspath}}/show_tags?experiment={{e}}">
-        Campaign Tags for {{e}}
-      </a>
-      {%endif%}
-      {%endfor%}
-      {%endif%}
-    </div>
-  </div>
-
-  <div class="item">
-    <div class="header">Campaign Stage Info</div>
-    <div class="menu">
-      {% if current_experimenter is defined and current_experimenter.authorized_for %}
-      {% for e in current_experimenter.authorized_for.keys() %}
-      {%if e != 'root' and current_experimenter.authorized_for[e] %}
-      <a class="item" href="{{pomspath}}/show_campaigns?experiment={{e}}">
-        Active for {{e}}
-      </a>
-      {%endif%}
-      {%endfor%}
-      {%endif%}
-      <a class="item" href="{{pomspath}}/show_campaigns">
-        All Active
-      </a>
-      <a class="item" href="{{pomspath}}/show_campaigns?active=False">
-        InActive
-      </a>
-    </div>
-  </div>
-  <div class="item">
-    <div class="header">Configure Work</div>
-    <div class="menu">
-      <a class="item" href="{{pomspath}}/launch_template_edit">
-        Compose Launch Template
-      </a>
-      <a class="item" href="{{pomspath}}/campaign_definition_edit">
-        Compose Job Type
-      </a>
-      <a class="item" href="{{pomspath}}/campaign_edit">
-        Compose Campaign Stage
-      </a>
-    </div>
-  </div>
-
-  <div class="item">
-    <div class="header">Jobs</div>
-    <div class="menu">
-
-      <a class="item" href="{{pomspath}}/job_table?tdays=1">
-        All (Last Day)
-      </a>
-      <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=name">
-        Failed_By Exit Code and Campaign Stage Name (Last Day)
-      </a>
-      <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=7&f=user_exe_exit_code&f=name">
-        Failed_By Exit Code and Campaign Stage Name (Last Week)
-      </a>
-      <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=node_name">
-        Failed_By Exit Code and Node Name (Last Day)
-      </a>
-      <a class="item" href="{{pomspath}}/failed_jobs_by_whatever?tdays=1&f=user_exe_exit_code&f=cpu_type">
-        Failed_By Exit Code and CPU Type(Last Day)
-      </a>
-    </div>
-  </div>
-
-  <!--<a class="item requests"  href="#">
-      <b>Filter</b>
-  </a>-->
-
-  <div class="item">
-    <div class="ui inverted transparent left icon input">
-      <form id="f1" method="get" action="{{pomspath}}/quick_search" onsubmit="return validateQuickSearchForm('f1')">
-        <input type="text" id=search_term_f1 name="search_term" placeholder="Search...">
-        <i class="search icon"></i>
-        <!--input type="submit" name="."-->
-      </form>
-    </div>
-  </div>
+{% include 'standard_menu.html' %}
 
 </div>  <!--ends mobile menu-->
 
 <!--more mobile stuff-->
-<div class="ui fixed inverted main menu">
-  <div class="ui container">
+<div class="ui fixed main menu">
+  <div class="ui container" style="width: 3em">
     <a class="launch icon item">
       <i class="content icon"></i>  <!--mobile menu button-->
     </a>
