fun with current_experimenter, fifemon_reader.cfg still pointed at lbne sam

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -25,7 +25,7 @@
     <b>Calendar</b>
   </a>
 
-  {% if (current_experimenter.is_root()) %}
+  {% if current_experimenter is defined and  (current_experimenter.is_root()) %}
   <div class="item">
     <div class="header">DB Admin</div>
     <div class="menu">
