--- a/webservice/static/css/poms.css
+++ b/webservice/static/css/poms.css
@@ -2010,7 +2010,7 @@ code .chunk {
 #example .full.height > .toc {
     position: relative;
     z-index: 1;
-    background-color: #1b1c1d;
+    /*VP background-color: #1b1c1d; */
     width: 250px;
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 auto;
