trying to tune to get bulk updates running smoothly

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -14,7 +14,7 @@
     <div class="ui icon input">
       <form action="{{pomspath}}/quick_search" style="width: 99%">
        <input type="text" name="search_term" placeholder="Search..." style="width: 95%">
-      <button type="submit" style="margin-left: -2.5em; height: 1.5em;">
+      <button type="submit" style="border:none; background-color:transparent; margin-left: -2.5em; height: 1.5em;">
          <i class="ui icon search"></i>
       </button>
       </form>
